--- a/_sass/minima/fastpages-dracula-highlight.scss
+++ b/_sass/minima/fastpages-dracula-highlight.scss
@@ -6,9 +6,9 @@ $dt-code-cell-background: #323443;
 $dt-gray: #44475a;       // Current Line & Selection
 $dt-gray-light: #f8f8f2; // Foreground
 $dt-blue: #6272a4;       // Comment
-$dt-cyan: #8be9fd;
+$dt-cyan: #3ba1e6;
 $dt-green: #50fa7b;
-$dt-orange: #ffb86c;
+$dt-orange: #ff6500;
 $dt-pink: #ff79c6;
 $dt-purple: #bd93f9;
 $dt-red: #ff5555;
@@ -35,20 +35,20 @@ $dt-green-light: rgb(172, 229, 145);
 .input_area pre, .input_area div {
     margin-bottom:1.0rem !important;
     margin-top:1.5rem !important;
-    padding-bottom:0.2rem !important;
-    padding-top:0.2rem !important;
+    padding-bottom:0.1rem !important;
+    padding-top:0.1rem !important;
     background: #323443 !important;
     -webkit-font-smoothing: antialiased;
     text-rendering: optimizeLegibility;
     font-family: Menlo, Monaco, Consolas, "Lucida Console", Roboto, Ubuntu, monospace;
-    border-radius: 5px;
+    border-radius: 0.1rem;
     font-size: 105%;
 }
 .output_area pre, .output_area div {
     margin-bottom:1rem !important;
     margin-top:0rem !important;
-    padding-bottom:0 !important;
-    padding-top:0 !important;
+    padding-bottom:0.1rem !important;
+    padding-top:0.1rem !important;
 }
 .input_area pre {
     border-left: 1px solid lightcoral;
