--- a/_sass/minima/fastpages-dracula-highlight.scss
+++ b/_sass/minima/fastpages-dracula-highlight.scss
@@ -35,8 +35,8 @@ $dt-green-light: rgb(172, 229, 145);
 .input_area pre, .input_area div {
     margin-bottom:1.0rem !important;
     margin-top:1.5rem !important;
-    padding-bottom:0.1rem !important;
-    padding-top:0.1rem !important;
+    padding-bottom:0rem !important;
+    padding-top:0rem !important;
     background: #323443 !important;
     -webkit-font-smoothing: antialiased;
     text-rendering: optimizeLegibility;
@@ -47,12 +47,15 @@ $dt-green-light: rgb(172, 229, 145);
 .output_area pre, .output_area div {
     margin-bottom:1rem !important;
     margin-top:0rem !important;
-    padding-bottom:0.1rem !important;
-    padding-top:0.1rem !important;
+    padding-bottom:0rem !important;
+    padding-top:0rem !important;
 }
-.input_area pre {
-    border-left: 1px solid lightcoral;
+
+.output_area div {
+  padding-top: 0.1rem !important;
+  padding-bottom: 0.1rem !important;
 }
+
 .output_area pre {
     border-left: 1px solid grey;
     margin-left: 1rem !important;
@@ -95,7 +98,7 @@ $dt-green-light: rgb(172, 229, 145);
     .sr,
     .s1,
     .ss {
-         color:rgb(231, 153, 122);
+         color:$dt-yellow;
     }
   
     .go {
@@ -132,7 +135,7 @@ $dt-green-light: rgb(172, 229, 145);
  
     .p {
          font-weight: bold;
-         color: rgb(102, 217, 239);
+         color: $dt-cyan;
  }
   
     .ge {
