--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -441,7 +441,9 @@ pre code { font-size: 15px !important; }
 
 .output_area pre, .output_area div { margin-bottom: 1rem !important; margin-top: 0rem !important; padding-bottom: 0rem !important; padding-top: 0rem !important; }
 
-.output_area div { padding-top: 0.1rem !important; padding-bottom: 0.1rem !important; }
+.input_area pre { padding-top: 0.1rem !important; padding-bottom: 0.1rem !important; }
+
+.output_area pre { padding-top: 0.1rem !important; padding-bottom: 0.1rem !important; }
 
 .output_area pre { border-left: 1px solid grey; margin-left: 1rem !important; font-size: 16px; }
 
