--- a/_sass/minima/fastpages-dracula-highlight.scss
+++ b/_sass/minima/fastpages-dracula-highlight.scss
@@ -51,12 +51,12 @@ $dt-green-light: rgb(172, 229, 145);
     padding-top:0rem !important;
 }
 
-.input_area pre {
+.hl-ipython3 pre {
   padding-top: 0.1rem !important;
   padding-bottom: 0.1rem !important;
 }
 
-.output_area pre {
+.output_subarea pre {
   padding-top: 0.1rem !important;
   padding-bottom: 0.1rem !important;
 }
